[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable maze generator module for A-Maze-ing."
readme = "README.md"
requires-python = ">=3.10"
authors = [
	{ name = "JoberDuarte" },
	{ name = "AdrianaNeves" },
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["maze*"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true